# conductor

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  HOMEBREW.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MARKETPLACE_INTEGRATION.md  QUICKSTART.md  README.md  TESTING.md  TROUBLESHOOTING.md  conductor.vsix  enhanced_plan_template.md  enhanced_spec_template.md  environment.yml  gemini-extension.json  install.ps1  install.sh  mise.toml  output.txt  package.json  pyproject.toml  qwen-extension.json  release-please-config.json  ruff.toml  setup.cfg
.agent/workflows/: conductor-implement.md  conductor-newtrack.md  conductor-revert.md  conductor-setup.md  conductor-status.md  conductor-test.md  conductor.md
.aic/: graph.db
.claude-plugin/: plugin.json
.claude/commands/: conductor-implement.md  conductor-newtrack.md  conductor-revert.md  conductor-setup.md  conductor-status.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: ralph-loop.local.md
.github/: rename_scan_report.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  upstream_sync.md  upstream_sync.yml
.onboarding/: architecture.md  code_maps.md  features.md
aic/: cli.py  db.py  server.py  skeleton.py  utils.py
chocolatey/: conductor.nuspec
cli/: Cargo.toml
commands/: conductor-info.md  conductor-status.md
conductor/: index.md  product-guidelines.md  product.md  smithery.toml  tech-stack.md  tracks.md  workflow.md
conductor-core/: README.md  pyproject.toml
conductor-core/conductor/: config.json
conductor-core/src/conductor_core/: __init__.py  config.py  errors.py  git_service.py  lsp.py  models.py  parser.py  project_manager.py  prompts.py  task_runner.py  telemetry.py  validation.py  vcs_adapters.py
conductor-core/src/conductor_core/templates/: SKILL.md.j2  implement.j2  new_track.j2  revert.j2  setup.j2  status.j2
conductor-core/tests/: test_capabilities.py  test_completeness_final.py  test_errors.py  test_git_service.py  test_lsp.py  test_models.py  test_project_manager.py  test_project_manager_backfill.py  test_prompts.py  test_skill_manifest.py  test_skill_tooling.py  test_skills_manifest.py  test_sync_skills_antigravity.py  test_task_runner.py  test_task_runner_backfill.py  test_task_runner_completeness.py  test_validation.py  test_validation_backfill.py
conductor-core/tests/contract/: test_core_skills.py
conductor-gemini/: pyproject.toml
conductor-gemini/src/conductor_gemini/: cli.py
conductor-gemini/tests/: test_cli.py  test_cli_backfill.py  test_vscode_contract.py
conductor-vscode/: package-lock.json  package.json
conductor_exp_backend/: package-lock.json  package.json
docs/: REPO_RENAME.md  context-hygiene.md  markdownlint-setup.md  marketplace_deployment_roadmap.md  release-notes.md  release-tag-recommendation.txt  release.md  setup-newtrack.md  skill-command-syntax.md  skills-design.md  validation.md
hooks/: hooks.json  plan_mode_warning.js
mcp/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcp-server/: package-lock.json  package.json  tsconfig.json
policies/: conductor.toml  conductor_exp.toml
sample_linear_integration_track/: index.md  metadata.json  plan.md  spec.md
scoop/: conductor.json
scripts/: ask_user_helper.py  build_core.sh  build_vsix.ps1  build_vsix.sh  check_skills_sync.py  cleanup_repo.sh  conductor_dev.py  conductor_install.py  conductor_update.py  confirm_overwrite.py  context_report.py  create_issue_tracks.py  create_track_gitignore.py  install_local.ps1  install_local.py  marketplace_integration.ps1  marketplace_integration.sh  prepare_marketplace.sh  rename_repo.py  render_command_matrix.py  render_workflows_md.py  setup_dev.ps1  skills_manifest.py  skills_validator.py  smoke_test.py  smoke_test_artifacts.py  sync_all.py  sync_skills.py  sync_upstream.py  test_installer.py  triage_issues.py  validate_antigravity.py  validate_artifacts.py  validate_docs.py  validate_platforms.py  validate_skill_docs.py  verify_installation.py
skill/: SKILL.md
skills/: catalog.md  manifest.json  manifest.schema.json
templates/: skills_registry.md  workflow.md
tests/: test_check_skills_sync.py  test_context_report.py  test_docs_updated.py  test_manifest_platforms_present.py  test_multi_lang.py  test_resolution.py  test_scripts_backfill.py  test_skeleton.py  test_sync_platforms.py  test_sync_skills.py  test_sync_skills_constants.py  test_validate_skill_docs.py
(+254 files in other folders)
