[metadata]
name = conductor-universal
version = 0.2.0
author = Edith Atogo
author_email = edithatogo@conductor-project.org
description = Context-Driven Development tool for AI-assisted workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edithatogo/conductor-next
project_urls =
    Bug Tracker = https://github.com/edithatogo/conductor-next/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.0.0
    jinja2>=3.0.0
    gitpython>=3.1.0
    pygls>=1.3.0
    lsprotocol>=2023.0.1

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    conductor = conductor_core.cli:main
